--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bincode = "2.0.0"
 hound = "3.5.1"
 rayon = "1.10.0"
 rustfft = "6.2.0"
+tempfile = "3.18.0"
