新增 `encoding` 和 `windows` 用于在 Windows 下取得默认的代码页，然后尝试用这个代码页的字符串转换函数将 WAV 元数据信息里面的所有字符串转换为 UTF-8

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 authors = ["0xAA55 <838816058@qq.com>"]
 
 [dependencies]
+encoding = "0.2.33"
 tempfile = "3.18.0"
+windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_Globalization"]}
 
 [lib]
 name = "rustwav_lib"
