--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ authors = ["0xAA55 <838816058@qq.com>"]
 [dependencies]
 encoding = "0.2.33"
 tempfile = "3.18.0"
+
+[target.'cfg(target_os = "windows")'.dependencies]
 windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_Globalization"]}
 
 [lib]
