--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,16 @@ authors = ["0xAA55 <838816058@qq.com>"]
 
 [dependencies]
 encoding = "0.2.33"
+id3 = { version = "1.16.2", optional = true }
 tempfile = "3.18.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_Globalization"]}
+
+[features]
+default = ["id3"]
+id3 = ["dep:id3"]
+no-id3 = []
 
 [lib]
 name = "rustwav_lib"
