--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,16 @@ edition = "2021"
 authors = ["0xAA55 <838816058@qq.com>"]
 
 [dependencies]
-encoding = "0.2.33"
-id3 = "1.16.2"
+encoding = { version = "0.2.33", optional = true }
+id3 = { version = "1.16.2", optional = true }
 tempfile = "3.18.0"
 
+[target.'cfg(target_os = "windows")'.dependencies]
 windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_Globalization"]}
 
 [features]
-default = ["id3"]
+id3 = ["dep:id3"]
+encoding = ["dep:encoding"]
 
 [lib]
 name = "rustwav_lib"
