--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["0xAA55 <838816058@qq.com>"]
 [dependencies]
 encoding = { version = "0.2.33", optional = true }
 id3 = { version = "1.16.2", optional = true }
+puremp3 = { version = "0.1.0", optional = true }
 tempfile = "3.18.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
@@ -15,6 +16,7 @@ windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_Globaliza
 [features]
 default = ["id3", "encoding"]
 id3 = ["dep:id3"]
+mp3 = ["dep:puremp3"]
 encoding = ["dep:encoding"]
 
 [lib]
