默认启用 `mp3` 特性

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ tempfile = "3.18.0"
 windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_Globalization"]}
 
 [features]
-default = ["id3", "encoding"]
+default = ["id3", "encoding", "mp3"]
 id3 = ["dep:id3"]
 mp3 = ["dep:puremp3"]
 encoding = ["dep:encoding"]
