--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["0xAA55 <838816058@qq.com>"]
 [dependencies]
 encoding = { version = "0.2.33", optional = true }
 id3 = { version = "1.16.2", optional = true }
+mp3lame-encoder = { version = "0.2.1", optional = true }
 puremp3 = { version = "0.1.0", optional = true }
 tempfile = "3.18.0"
 
