将特性 `mp3` 拆分为 `mp3dec` 和 `mp3enc`，两者默认开启。

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,10 @@ tempfile = "3.18.0"
 windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_Globalization"]}
 
 [features]
-default = ["id3", "encoding", "mp3"]
+default = ["id3", "encoding", "mp3dec", "mp3enc"]
 id3 = ["dep:id3"]
-mp3 = ["dep:puremp3"]
+mp3dec = ["dep:puremp3"]
+mp3enc = ["dep:mp3lame-encoder"]
 encoding = ["dep:encoding"]
 
 [lib]
