--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ encoding = { version = "0.2.33", optional = true }
 id3 = { version = "1.16.2", optional = true }
 mp3lame-encoder = { version = "0.2.1", optional = true }
 puremp3 = { version = "0.1.0", optional = true }
+rustfft = { version = "6.2.0", optional = true }
 tempfile = "3.18.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
@@ -20,6 +21,7 @@ id3 = ["dep:id3"]
 mp3dec = ["dep:puremp3"]
 mp3enc = ["dep:mp3lame-encoder"]
 encoding = ["dep:encoding"]
+resampler = ["dep:rustfft"]
 
 [lib]
 name = "rustwav_lib"
