--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["0xAA55 <838816058@qq.com>"]
 
 [dependencies]
 encoding = { version = "0.2.33", optional = true }
+flac = { version =  "0.5.0", optional = true }
 id3 = { version = "1.16.2", optional = true }
 mp3lame-encoder = { version = "0.2.1", optional = true }
 puremp3 = { version = "0.1.0", optional = true }
@@ -16,12 +17,13 @@ tempfile = "3.18.0"
 windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_Globalization"]}
 
 [features]
-default = ["id3", "encoding", "mp3dec", "mp3enc", "resampler"]
+default = ["id3", "encoding", "resampler", "mp3dec", "mp3enc", "flac"]
 id3 = ["dep:id3"]
 mp3dec = ["dep:puremp3"]
 mp3enc = ["dep:mp3lame-encoder"]
 encoding = ["dep:encoding"]
 resampler = ["dep:rustfft"]
+flac = ["dep:flac"]
 
 [lib]
 name = "rustwav_lib"
