--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ encoding = { version = "0.2.33", optional = true }
 flac = { version =  "0.5.0", optional = true }
 id3 = { version = "1.16.2", optional = true }
 mp3lame-encoder = { version = "0.2.1", optional = true }
-puremp3 = { version = "0.1.0", optional = true }
+rmp3 = { version = "0.3.1", features = ["mp1-mp2", "std"], optional = true }
 rustfft = { version = "6.2.0", optional = true }
 tempfile = "3.18.0"
 
@@ -19,7 +19,7 @@ windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_Globaliza
 [features]
 default = ["id3", "encoding", "resampler", "mp3dec", "mp3enc", "flac"]
 id3 = ["dep:id3"]
-mp3dec = ["dep:puremp3"]
+mp3dec = ["dep:rmp3"]
 mp3enc = ["dep:mp3lame-encoder"]
 encoding = ["dep:encoding"]
 resampler = ["dep:rustfft"]
