--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,19 +9,17 @@ encoding = { version = "0.2.33", optional = true }
 id3 = { version = "1.16.2", optional = true }
 mp3lame-encoder = { version = "0.2.1", optional = true }
 rmp3 = { version = "0.3.1", features = ["mp1-mp2", "std"], optional = true }
-rustfft = { version = "6.2.0", optional = true }
 tempfile = "3.18.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_Globalization"]}
 
 [features]
-default = ["id3", "encoding", "resampler", "mp3dec", "mp3enc"]
+default = ["id3", "encoding", "mp3dec", "mp3enc"]
 id3 = ["dep:id3"]
 mp3dec = ["dep:rmp3"]
 mp3enc = ["dep:mp3lame-encoder"]
 encoding = ["dep:encoding"]
-resampler = ["dep:rustfft"]
 
 [profile.release]
 lto = "fat"
