--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,18 +8,20 @@ authors = ["0xAA55 <838816058@qq.com>"]
 encoding = { version = "0.2.33", optional = true }
 id3 = { version = "1.16.2", optional = true }
 mp3lame-encoder = { version = "0.2.1", optional = true }
-rmp3 = { version = "0.3.1", features = ["mp1-mp2", "std"], optional = true }
+opus = { version = "0.3.0", optional = true}
+rmp3 = { version = "0.3.1", optional = true, features = ["mp1-mp2", "std"] }
 tempfile = "3.18.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_Globalization"]}
 
 [features]
-default = ["id3", "encoding", "mp3dec", "mp3enc"]
+default = ["id3", "text_encoding", "mp3dec", "mp3enc", "opus"]
+text_encoding = ["dep:encoding"]
 id3 = ["dep:id3"]
 mp3dec = ["dep:rmp3"]
 mp3enc = ["dep:mp3lame-encoder"]
-encoding = ["dep:encoding"]
+opus = ["dep:opus"]
 
 [profile.release]
 lto = "fat"
