--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ id3 = { version = "1.16.2", optional = true }
 mp3lame-encoder = { version = "0.2.1", optional = true }
 opus = { version = "0.3.0", optional = true}
 rmp3 = { version = "0.3.1", optional = true, features = ["mp1-mp2", "std"] }
+rustfft = "6.2.0"
 tempfile = "3.18.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
