--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "rustwav"
 version = "0.0.12"
 edition = "2021"
 authors = ["0xAA55 <838816058@qq.com>"]
+description = "WAV format audio file parser and creator, with resampler, can change the sample rate of the audio file, and a lot of sub-format support e.g. ADPCM, aLaw, MuLaw, mp3, opus, flac, etc."
 
 [dependencies]
 encoding = { version = "0.2.33", optional = true }
