--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.0.12"
 edition = "2021"
 authors = ["0xAA55 <838816058@qq.com>"]
 readme = "Readme.md"
+license= "LGPL-2.1"
 license-file = "LICENSE"
 description = "WAV format audio file parser and creator, with resampler, can change the sample rate of the audio file, and a lot of sub-format support e.g. ADPCM, aLaw, MuLaw, mp3, opus, flac, etc."
 repository = "https://github.com/0xAA55-rs/rustwav"
+keywords = ["audio", "WAV"]
 
 [dependencies]
 encoding = { version = "0.2.33", optional = true }
