--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,11 @@ keywords = ["audio", "WAV"]
 
 [dependencies]
 encoding = { version = "0.2.33", optional = true }
+flac-rs = { version = "0.0.6", optional = true }
 id3 = { version = "1.16.2", optional = true }
-libflac-sys = { version = "0.3.2", optional = true, default-features = false, features = ["build-flac"] }
 mp3lame-encoder = { version = "0.2.1", optional = true }
 opus = { version = "0.3.0", optional = true}
 rmp3 = { version = "0.3.1", optional = true, features = ["mp1-mp2", "std"] }
-rustfft = "6.2.0"
 tempfile = "3.18.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
@@ -29,7 +28,7 @@ id3 = ["dep:id3"]
 mp3dec = ["dep:rmp3"]
 mp3enc = ["dep:mp3lame-encoder"]
 opus = ["dep:opus"]
-flac = ["dep:libflac-sys"]
+flac = ["dep:flac-rs"]
 
 [profile.release]
 lto = "fat"
