--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ flac-rs = { version = "0.0.6", optional = true }
 id3 = { version = "1.16.2", optional = true }
 mp3lame-encoder = { version = "0.2.1", optional = true }
 opus = { version = "0.3.0", optional = true}
+resampler-rs = "0.0.1"
 rmp3 = { version = "0.3.1", optional = true, features = ["mp1-mp2", "std"] }
 tempfile = "3.18.0"
 
