--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ mp3lame-encoder = { version = "0.2.1", optional = true }
 opus = { version = "0.3.0", optional = true}
 resampler-rs = "0.0.1"
 rmp3 = { version = "0.3.1", optional = true, features = ["mp1-mp2", "std"] }
+sampletypes = "0.0.3"
 tempfile = "3.18.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
