--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustwav"
-version = "0.0.21"
+version = "0.0.22"
 edition = "2024"
 authors = ["0xAA55 <838816058@qq.com>"]
 readme = "Readme.md"
@@ -15,8 +15,9 @@ flac-rs = { version = "0.0.6", optional = true }
 id3 = { version = "1.16.2", optional = true }
 mp3lame-encoder = { version = "0.2.1", optional = true }
 opus = { version = "0.3.0", optional = true}
-resampler-rs = "0.0.1"
 rmp3 = { version = "0.3.1", optional = true, features = ["mp1-mp2", "std"] }
+vorbis_rs = { version = "0.5.5", optional = true}
+resampler-rs = "0.0.1"
 sampletypes = "0.1.2"
 tempfile = "3.18.0"
 
@@ -24,13 +25,14 @@ tempfile = "3.18.0"
 windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_Globalization"]}
 
 [features]
-default = ["id3", "text_encoding", "mp3dec", "mp3enc", "opus", "flac"]
+default = ["id3", "text_encoding", "mp3dec", "mp3enc", "opus", "flac", "vorbis"]
 text_encoding = ["dep:encoding"]
 id3 = ["dep:id3"]
 mp3dec = ["dep:rmp3"]
 mp3enc = ["dep:mp3lame-encoder"]
 opus = ["dep:opus"]
 flac = ["dep:flac-rs"]
+vorbis = ["dep:vorbis_rs"]
 
 [profile.release]
 lto = "fat"
