区分 `Vorbis` 和 `OggVorbis`，我们准备实现的是 `OggVorbis`，并对 WAV 里面的六个 tag 进行专门的支持。

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,14 +25,14 @@ tempfile = "3.18.0"
 windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_Globalization"]}
 
 [features]
-default = ["id3", "text_encoding", "mp3dec", "mp3enc", "opus", "flac", "vorbis"]
+default = ["id3", "text_encoding", "mp3dec", "mp3enc", "opus", "flac", "oggvorbis"]
 text_encoding = ["dep:encoding"]
 id3 = ["dep:id3"]
 mp3dec = ["dep:rmp3"]
 mp3enc = ["dep:mp3lame-encoder"]
 opus = ["dep:opus"]
 flac = ["dep:flac-rs"]
-vorbis = ["dep:vorbis_rs"]
+oggvorbis = ["dep:vorbis_rs"]
 
 [profile.release]
 lto = "fat"
