--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,39 +1,63 @@
-[package]
-name = "rustwav"
-version = "0.3.0"
+[workspace]
+members = ["packages/*"]
+resolver = "3"
+
+[workspace.package]
+version = "0.3.1"
 edition = "2024"
 authors = ["0xAA55 <838816058@qq.com>"]
-readme = "Readme.md"
 license-file = "LICENSE"
-description = "WAV format audio file parser and creator, with resampler and downmixer, can change the sample rate of the audio file, and a lot of sub-format support e.g. ADPCM, aLaw, MuLaw, mp3, opus, flac, ogg vorbis, etc."
 repository = "https://github.com/0xAA55-rs/rustwav"
+
+[package]
+name = "rustwav"
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+repository.workspace = true
+license-file.workspace = true
+readme = "Readme.md"
+description = "WAV format audio file parser and creator, with resampler and downmixer, can change the sample rate of the audio file, and a lot of sub-format support e.g. ADPCM, aLaw, MuLaw, mp3, opus, flac, ogg vorbis, etc."
 keywords = ["audio", "WAV", "codec", "RIFF"]
 
 [dependencies]
-encoding = { version = "0.2.33", optional = true }
-flac-rs = { version = "0.0.6", optional = true }
-id3 = { version = "1.16.2", optional = true }
-mp3lame-encoder = { version = "0.2.1", optional = true }
-opus = { version = "0.3.0", optional = true}
-rmp3 = { version = "0.3.1", optional = true, features = ["mp1-mp2", "std"] }
-vorbis_rs = { version = "0.5.5", optional = true}
-resampler-rs = "0.0.1"
-sampletypes = "0.1.3"
-tempfile = "3.18.0"
+ogg.workspace = true
+vorbis.workspace = true
+bitwise.workspace = true
+readwrite.workspace = true
+savagestr.workspace = true
+filehasher.workspace = true
+copiablebuf.workspace = true
+rustwav-core.workspace = true
 
-[target.'cfg(target_os = "windows")'.dependencies]
-windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_Globalization"]}
+tempfile.workspace = true
+sampletypes.workspace = true
+resampler-rs.workspace = true
+
+[workspace.dependencies]
+ogg = { version = "*", path = "packages/ogg" }
+vorbis = { version = "*", path = "packages/vorbis" }
+bitwise = { version = "*", path = "packages/bitwise" }
+readwrite = { version = "*", path = "packages/readwrite" }
+savagestr = { version = "*", path = "packages/savagestr" }
+filehasher = { version = "*", path = "packages/filehasher" }
+copiablebuf = { version = "*", path = "packages/copiablebuf" }
+rustwav-core = { version = "*", path = "packages/rustwav-core" }
+
+sampletypes = "0.1.3"
+resampler-rs = "0.0.1"
+tempfile = "3.18.0"
 
 [features]
 default = ["id3", "text_encoding", "mp3dec", "mp3enc", "opus", "flac", "vorbis", "oggvorbis"]
-text_encoding = ["dep:encoding"]
-id3 = ["dep:id3"]
-mp3dec = ["dep:rmp3"]
-mp3enc = ["dep:mp3lame-encoder"]
-opus = ["dep:opus"]
-flac = ["dep:flac-rs"]
-vorbis = ["dep:vorbis_rs"]
-oggvorbis = ["dep:vorbis_rs"]
+text_encoding = ["savagestr/text_encoding"]
+id3 = ["rustwav-core/id3"]
+mp3dec = ["rustwav-core/mp3dec"]
+mp3enc = ["rustwav-core/mp3enc"]
+opus = ["rustwav-core/opus"]
+flac = ["rustwav-core/flac"]
+vorbis = ["rustwav-core/vorbis"]
+oggvorbis = ["rustwav-core/oggvorbis"]
 
 [profile.release]
 lto = "fat"
