--- a/packages/rustwav-core/Cargo.toml
+++ b/packages/rustwav-core/Cargo.toml
@@ -11,7 +11,7 @@ ogg.workspace = true
 xlaw.workspace = true
 vorbis.workspace = true
 bitwise.workspace = true
-readwrite.workspace = true
+io_utils.workspace = true
 downmixer.workspace = true
 savagestr.workspace = true
 audioutils.workspace = true
