为避免发布的时候抢了风头，这个测试用的项目改名为 `revorbis-rs`

--- a/packages/revorbis-rs/Cargo.toml
+++ b/packages/revorbis-rs/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
-name = "vorbis"
+name = "revorbis-rs"
 version = "0.0.1"
 edition.workspace = true
 authors.workspace = true
 license-file.workspace = true
 repository.workspace = true
+description = "A try to rewrite libvorbis in Rust."
+keywords = ["vorbis", "audio"]
 
 [dependencies]
 ogg.workspace = true
@@ -13,5 +15,5 @@ io_utils.workspace = true
 copiablebuf.workspace = true
 
 [lib]
-name = "vorbis"
+name = "revorbis"
 path = "src/vorbis.rs"
