--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,6 @@ keywords = ["audio", "WAV", "codec", "RIFF"]
 [dependencies]
 ogg.workspace = true
 xlaw.workspace = true
-vorbis.workspace = true
 bitwise.workspace = true
 io_utils.workspace = true
 downmixer.workspace = true
@@ -31,6 +30,7 @@ savagestr.workspace = true
 audioutils.workspace = true
 filehasher.workspace = true
 copiablebuf.workspace = true
+revorbis-rs.workspace = true
 rustwav-core.workspace = true
 
 tempfile.workspace = true
@@ -40,7 +40,6 @@ resampler-rs.workspace = true
 [workspace.dependencies]
 ogg = { version = "*", path = "packages/ogg" }
 xlaw = { version = "*", path = "packages/xlaw" }
-vorbis = { version = "*", path = "packages/vorbis" }
 bitwise = { version = "*", path = "packages/bitwise" }
 io_utils = { version = "*", path = "packages/io_utils" }
 downmixer = { version = "*", path = "packages/downmixer" }
@@ -48,6 +47,7 @@ savagestr = { version = "*", path = "packages/savagestr" }
 audioutils = { version = "*", path = "packages/audioutils" }
 filehasher = { version = "*", path = "packages/filehasher" }
 copiablebuf = { version = "*", path = "packages/copiablebuf" }
+revorbis-rs = { version = "*", path = "packages/revorbis-rs" }
 rustwav-core = { version = "*", path = "packages/rustwav-core" }
 
 sampletypes = "0.1.3"
