`ogg` 名字被占了。改名 `tinyogg`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,8 @@ description = "WAV format audio file parser and creator, with resampler and down
 keywords = ["audio", "WAV", "codec", "RIFF"]
 
 [dependencies]
-ogg.workspace = true
 xlaw.workspace = true
+tinyogg.workspace = true
 io_utils.workspace = true
 downmixer.workspace = true
 savagestr.workspace = true
@@ -37,8 +37,8 @@ sampletypes.workspace = true
 resampler-rs.workspace = true
 
 [workspace.dependencies]
-ogg = { version = "*", path = "packages/ogg" }
 xlaw = { version = "*", path = "packages/xlaw" }
+tinyogg = { version = "*", path = "packages/tinyogg" }
 io_utils = { version = "*", path = "packages/io_utils" }
 downmixer = { version = "*", path = "packages/downmixer" }
 savagestr = { version = "*", path = "packages/savagestr" }
