--- a/packages/savagestr/Cargo.toml
+++ b/packages/savagestr/Cargo.toml
@@ -5,6 +5,8 @@ edition.workspace = true
 authors.workspace = true
 license-file.workspace = true
 repository.workspace = true
+description = "SAVAGE string encoder/decoder. If can encode or decode by specifying the code page or the encoding name, it works, else it uses the savage way to encode/decode by using `String::from_utf8_lossy()`"
+keywords = ["string", "utf8", "mbcs", "i18n"]
 
 [dependencies]
 encoding = { version = "0.2.33", optional = true }
