`io_utils` 被人占了。改名 `shared_io_utils`。

--- a/packages/filehasher/Cargo.toml
+++ b/packages/filehasher/Cargo.toml
@@ -7,7 +7,7 @@ license-file.workspace = true
 repository.workspace = true
 
 [dependencies]
-io_utils.workspace = true
+shared_io_utils.workspace = true
 
 [lib]
 name = "filehasher"
