--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,6 @@ keywords = ["audio", "WAV", "codec", "RIFF"]
 [dependencies]
 xlaw.workspace = true
 tinyogg.workspace = true
-io_utils.workspace = true
 downmixer.workspace = true
 savagestr.workspace = true
 audioutils.workspace = true
@@ -31,22 +30,23 @@ filehasher.workspace = true
 copiablebuf.workspace = true
 revorbis-rs.workspace = true
 rustwav-core.workspace = true
+shared_io_utils.workspace = true
 
 tempfile.workspace = true
 sampletypes.workspace = true
 resampler-rs.workspace = true
 
 [workspace.dependencies]
-xlaw = { version = "*", path = "packages/xlaw" }
-tinyogg = { version = "*", path = "packages/tinyogg" }
-io_utils = { version = "*", path = "packages/io_utils" }
-downmixer = { version = "*", path = "packages/downmixer" }
-savagestr = { version = "*", path = "packages/savagestr" }
-audioutils = { version = "*", path = "packages/audioutils" }
-filehasher = { version = "*", path = "packages/filehasher" }
-copiablebuf = { version = "*", path = "packages/copiablebuf" }
-revorbis-rs = { version = "*", path = "packages/revorbis-rs" }
-rustwav-core = { version = "*", path = "packages/rustwav-core" }
+xlaw = { version = "^0.0.1", path = "packages/xlaw" }
+tinyogg = { version = "^0.0.1", path = "packages/tinyogg" }
+downmixer = { version = "^0.0.1", path = "packages/downmixer" }
+savagestr = { version = "^0.0.1", path = "packages/savagestr" }
+audioutils = { version = "^0.0.1", path = "packages/audioutils" }
+filehasher = { version = "^0.0.1", path = "packages/filehasher" }
+copiablebuf = { version = "^0.0.1", path = "packages/copiablebuf" }
+revorbis-rs = { version = "^0.0.1", path = "packages/revorbis-rs" }
+rustwav-core = { version = "^0.3.1", path = "packages/rustwav-core" }
+shared_io_utils = { version = "^0.0.1", path = "packages/shared_io_utils" }
 
 sampletypes = "0.1.3"
 resampler-rs = "0.0.1"
