--- a/packages/downmixer/Cargo.toml
+++ b/packages/downmixer/Cargo.toml
@@ -5,6 +5,8 @@ edition.workspace = true
 authors.workspace = true
 license-file.workspace = true
 repository.workspace = true
+description = "A downmixer that can do 2, Dolby 2.1, 3.1, 4.1, 5.1, 6.1, 7.1 channels audio downmix to 2 or 1 channels in Rust."
+keywords = ["downmixer", "audio"]
 
 [dependencies]
 copiablebuf.workspace = true
