`filehasher` 被人占坑了，改名为 `fileparthasher`

--- a/packages/rustwav-core/Cargo.toml
+++ b/packages/rustwav-core/Cargo.toml
@@ -12,9 +12,9 @@ tinyogg.workspace = true
 downmixer.workspace = true
 savagestr.workspace = true
 audioutils.workspace = true
-filehasher.workspace = true
 revorbis-rs.workspace = true
 copiablebuf.workspace = true
+fileparthasher.workspace = true
 shared_io_utils.workspace = true
 
 tempfile.workspace = true
