--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,12 +25,12 @@ xlaw.workspace = true
 tinyogg.workspace = true
 downmixer.workspace = true
 savagestr.workspace = true
-audioutils.workspace = true
 copiablebuf.workspace = true
 revorbis-rs.workspace = true
 rustwav-core.workspace = true
 fileparthasher.workspace = true
 shared_io_utils.workspace = true
+audiochannelutils.workspace = true
 
 tempfile.workspace = true
 sampletypes.workspace = true
@@ -41,12 +41,12 @@ xlaw = { version = "^0.0.1", path = "packages/xlaw" }
 tinyogg = { version = "^0.0.1", path = "packages/tinyogg" }
 downmixer = { version = "^0.0.1", path = "packages/downmixer" }
 savagestr = { version = "^0.0.1", path = "packages/savagestr" }
-audioutils = { version = "^0.0.1", path = "packages/audioutils" }
 copiablebuf = { version = "^0.0.1", path = "packages/copiablebuf" }
 revorbis-rs = { version = "^0.0.1", path = "packages/revorbis-rs" }
 rustwav-core = { version = "^0.3.1", path = "packages/rustwav-core" }
 fileparthasher = { version = "^0.0.1", path = "packages/fileparthasher" }
 shared_io_utils = { version = "^0.0.1", path = "packages/shared_io_utils" }
+audiochannelutils = { version = "^0.0.1", path = "packages/audiochannelutils" }
 
 sampletypes = "0.1.3"
 resampler-rs = "0.0.1"
