--- a/packages/audiochannelutils/Cargo.toml
+++ b/packages/audiochannelutils/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
-name = "audioutils"
+name = "audiochannelutils"
 version = "0.0.1"
 edition.workspace = true
 authors.workspace = true
 license-file.workspace = true
 repository.workspace = true
+description = "An audio form converter that provides functions for converting variaties of audio forms, e.g. interleaved samples to audio frames, audio frames to multiple mono channels, etc."
+keywords = ["audio", "resampler"]
 
 [dependencies]
 sampletypes.workspace = true
