--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2024"
 authors = ["0xAA55 <838816058@qq.com>"]
 license-file = "LICENSE"
 repository = "https://github.com/0xAA55-rs/rustwav"
+readme = "Readme.md"
 
 [package]
 name = "rustwav"
