--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,34 +23,36 @@ keywords = ["audio", "WAV", "codec", "RIFF"]
 
 [dependencies]
 xlaw.workspace = true
+flac-rs.workspace = true
 tinyogg.workspace = true
 downmixer.workspace = true
 savagestr.workspace = true
+sampletypes.workspace = true
 copiablebuf.workspace = true
 revorbis-rs.workspace = true
+resampler-rs.workspace = true
 rustwav-core.workspace = true
 fileparthasher.workspace = true
 shared_io_utils.workspace = true
 audiochannelutils.workspace = true
 
 tempfile.workspace = true
-sampletypes.workspace = true
-resampler-rs.workspace = true
 
 [workspace.dependencies]
 xlaw = { version = "^0", path = "packages/xlaw" }
+flac-rs = { version = "^0", path = "packages/flac-rs" }
 tinyogg = { version = "^0", path = "packages/tinyogg" }
 downmixer = { version = "^0", path = "packages/downmixer" }
 savagestr = { version = "^0", path = "packages/savagestr" }
 copiablebuf = { version = "^0", path = "packages/copiablebuf" }
 revorbis-rs = { version = "^0", path = "packages/revorbis-rs" }
+resampler-rs = { version = "^0", path = "packages/resampler-rs" }
+sampletypes = { version = "^0", path = "packages/sampletypes-rs" }
 rustwav-core = { version = "^0", path = "packages/rustwav-core" }
 fileparthasher = { version = "^0", path = "packages/fileparthasher" }
 shared_io_utils = { version = "^0", path = "packages/shared_io_utils" }
 audiochannelutils = { version = "^0", path = "packages/audiochannelutils" }
 
-sampletypes = "^0"
-resampler-rs = "^0"
 tempfile = "^3"
 
 [features]
