--- a/packages/rustwav-core/Cargo.toml
+++ b/packages/rustwav-core/Cargo.toml
@@ -11,25 +11,25 @@ keywords = ["audio", "WAV", "codec", "RIFF"]
 
 [dependencies]
 xlaw.workspace = true
+flac-rs.workspace = true
 tinyogg.workspace = true
 downmixer.workspace = true
 savagestr.workspace = true
 revorbis-rs.workspace = true
 copiablebuf.workspace = true
+sampletypes.workspace = true
+resampler-rs.workspace = true
 fileparthasher.workspace = true
 shared_io_utils.workspace = true
 audiochannelutils.workspace = true
 
 tempfile.workspace = true
-sampletypes.workspace = true
-resampler-rs.workspace = true
 
-flac-rs = { version = "0.0.6", optional = true }
-id3 = { version = "1.16.2", optional = true }
-mp3lame-encoder = { version = "0.2.1", optional = true }
-opus = { version = "0.3.0", optional = true}
-rmp3 = { version = "0.3.1", optional = true, features = ["mp1-mp2", "std"] }
-vorbis_rs = { version = "0.5.5", optional = true}
+id3 = { version = "^1", optional = true }
+mp3lame-encoder = { version = "^0", optional = true }
+opus = { version = "^0", optional = true}
+rmp3 = { version = "^0", optional = true, features = ["mp1-mp2", "std"] }
+vorbis_rs = { version = "^0", optional = true}
 
 [features]
 default = ["id3", "mp3dec", "mp3enc", "opus", "flac", "vorbis", "oggvorbis"]
@@ -37,7 +37,7 @@ id3 = ["dep:id3"]
 mp3dec = ["dep:rmp3"]
 mp3enc = ["dep:mp3lame-encoder"]
 opus = ["dep:opus"]
-flac = ["dep:flac-rs"]
+flac = []
 vorbis = ["dep:vorbis_rs"]
 oggvorbis = ["dep:vorbis_rs"]
 
