开启 lto = "fat" 是必须的，即使 cargo 发出 warning 也要无视之。其实这是 cargo 的 bug，因为如果你不给你的 workspace 成员开启 lto = "fat"，会导致 workspace 的 [profile.release] 的 lto = "fat" 不起作用。

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,9 @@ flac = ["rustwav-core/flac"]
 vorbis = ["rustwav-core/vorbis"]
 oggvorbis = ["rustwav-core/oggvorbis"]
 
+[profile.release]
+lto = "fat"
+
 [lib]
 name = "rustwav"
 path = "src/lib.rs"
