--- a/packages/copiablebuf/Cargo.toml
+++ b/packages/copiablebuf/Cargo.toml
@@ -8,7 +8,8 @@ repository.workspace = true
 description = "Copiable buffer, a tinier `Vec`, uses a fixed-size array to store a variable number of items."
 keywords = ["container", "buffer", "array"]
 
-[dependencies]
+[profile.release]
+lto = "fat"
 
 [lib]
 name = "copiablebuf"
