--- a/packages/tinyogg/Cargo.toml
+++ b/packages/tinyogg/Cargo.toml
@@ -9,7 +9,8 @@ readme = "Readme.md"
 description = "A very simple Ogg packet serializer and deserializer and a stream for writing data and encapsulating the data into Ogg streams."
 keywords = ["ogg"]
 
-[dependencies]
+[profile.release]
+lto = "fat"
 
 [lib]
 name = "ogg"
