--- a/packages/rustwav-core/Cargo.toml
+++ b/packages/rustwav-core/Cargo.toml
@@ -41,6 +41,9 @@ flac = []
 vorbis = ["dep:vorbis_rs"]
 oggvorbis = ["dep:vorbis_rs"]
 
+[profile.release]
+lto = "fat"
+
 [lib]
 name = "rustwav_core"
 path = "src/lib.rs"
