--- a/packages/shared_io_utils/Cargo.toml
+++ b/packages/shared_io_utils/Cargo.toml
@@ -12,6 +12,9 @@ keywords = ["IO", "shared", "reader", "writer"]
 [dependencies]
 savagestr.workspace = true
 
+[profile.release]
+lto = "fat"
+
 [lib]
 name = "io_utils"
 path = "src/io_utils.rs"
