--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ authors = ["0xAA55 <838816058@qq.com>"]
 license-file = "LICENSE"
 repository = "https://github.com/0xAA55-rs/rustwav"
 readme = "Readme.md"
+description = "WAV format audio file parser and creator, with resampler and downmixer, can change the sample rate of the audio file, and a lot of sub-format support e.g. ADPCM, aLaw, MuLaw, mp3, opus, flac, ogg vorbis, etc."
+keywords = ["audio", "WAV", "codec", "RIFF"]
 
 [package]
 name = "rustwav"
@@ -16,10 +18,9 @@ version.workspace = true
 edition.workspace = true
 authors.workspace = true
 repository.workspace = true
+readme.workspace = true
 license-file.workspace = true
-readme = "Readme.md"
-description = "WAV format audio file parser and creator, with resampler and downmixer, can change the sample rate of the audio file, and a lot of sub-format support e.g. ADPCM, aLaw, MuLaw, mp3, opus, flac, ogg vorbis, etc."
-keywords = ["audio", "WAV", "codec", "RIFF"]
+description.workspace = true
 
 [dependencies]
 xlaw.workspace = true
