--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "packages/revorbis-rs"]
 	path = packages/revorbis-rs
 	url = https://github.com/0xAA55-rs/revorbis-rs
+[submodule "packages/--init"]
+	path = packages/--init
+	url = https://github.com/0xAA55-rs/shared_io_utils.git
