--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ xlaw = { version = "^0" }
 flac-rs = { version = "^0" }
 tinyogg = { version = "^0", path = "packages/tinyogg" }
 downmixer = { version = "^0" }
-savagestr = { version = "^0", path = "packages/savagestr" }
+savagestr = { version = "^0" }
 copiablebuf = { version = "^0" }
 revorbis-rs = { version = "^0", path = "packages/revorbis-rs" }
 resampler-rs = { version = "^0" }
