将 `tinyogg` 变为 repo，然后以 submodule 的形式导入。

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "packages/shared_io_utils"]
 	path = packages/shared_io_utils
 	url = https://github.com/0xAA55-rs/shared_io_utils.git
+[submodule "packages/tinyogg"]
+	path = packages/tinyogg
+	url = https://github.com/0xAA55-rs/tinyogg.git
