重新添加 `savagestr` 到 package 里面。

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "packages/tinyogg"]
 	path = packages/tinyogg
 	url = https://github.com/0xAA55-rs/tinyogg.git
+[submodule "packages/savagestr"]
+	path = packages/savagestr
+	url = https://github.com/0xAA55-rs/savagestr.git
